# autonomy_timer

./: .env.example  .gitignore  README.md  pyproject.toml
src/jira_tt/: cli.py  formatter.py  jira_client.py  path_extractor.py  remote_reader.py  yaml_parser.py
